fixed bug on mobile

--- a/style.css
+++ b/style.css
@@ -2,14 +2,12 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  overflow: hidden;
   font-size: 62.5%;
-  min-height: 100vh;
 }
 
 h1{
   text-align: center;
-  font-size: 15em;
+  font-size: 13em;
 }
 
 .gridContainer {
@@ -25,4 +23,5 @@ h1{
   padding: 20px;
   font-size: 9em;
   text-align: center;
+  min-height: 100px;
 }
